2014-07-08  James Hunt  <james.hunt@ubuntu.com>

	* init/main.c: main():
	  - Only create inotify watches if not restarting or if performing a
	    stateless re-exec (LP: #1338637).

2014-07-07  James Hunt  <james.hunt@ubuntu.com>

	* init/tests/test_job_process.c: test_handler():
	  - Remove logs generated by PROCESS_MAIN. This wasn't necessary before
	    due to the manifestation of LP: #1302117 not restoring the correct
	    umask.

2014-07-03  James Hunt  <james.hunt@ubuntu.com>

	* init/job_process.c:
	  - job_process_data_serialise(): Serialise status.
	  - job_process_data_deserialise(): Deserialise status.
	* init/tests/data/upstart-1.13.json: Add missing JobProcessData->status.
	* init/tests/test_state.c: test_cgroup_and_process_data_state():
	  - Ensure JobProcessData recreated in expected form.

2014-07-02  James Hunt  <james.hunt@ubuntu.com>

	* init/tests/data/upstart-1.13.json: Updated with new content containing
	  both more cgroup stanza jobs and a job with a job process whose
	  child setup is "in-flight", representing the JobProcessData in the
	  JSON as 'process_data'.
	* init/tests/test_state.c: test_cgroup_and_process_data_state():
	  - Renamed from test_cgroup_state().
	  - Made cgroup guards more fine-grainded to ensure this test always
	    runs, but only tests cgroup content if built with cgroup support.
	  - Pre-process the JSON to pass a valid fd to allow the deserialisation
	    of the JobProcessData to succeed.

2014-06-04  James Hunt  <james.hunt@ubuntu.com>

	* dbus/com.ubuntu.Upstart.xml: Renamed SetEnvMulti to SetEnvList and
	  UnsetEnvMulti to UnsetEnvList for clarity.
	* init/control.c:
	  - control_set_env_list(): Renamed from control_set_env_multi().
	  - control_unset_env_list(): Renamed from control_unset_env_multi().
	  - control_unset_env(): Actually make it call control_unset_env_list().
	* util/initctl.c: Updated to call renamed functions.

2014-06-02  James Hunt  <james.hunt@ubuntu.com>
